# giraffa-sdk

./: Cargo.toml  README.md
.github/workflows/: test.yml
docs/: CNAME  README.md
game/: README.md
modules/: README.md
modules/content/: Cargo.toml
modules/content/src/: lib.rs
modules/links/: Cargo.toml
modules/links/src/: lib.rs
modules/module-template/: Cargo.toml
modules/module-template/src/: lib.rs
node/cli/: Cargo.toml
node/cli/src/: lib.rs
node/runtime/: Cargo.toml  build.rs
node/runtime/src/: lib.rs
primitives/graph-primitives/: Cargo.toml  README.md
primitives/graph-primitives/src/: lib.rs  property.rs
scripts/: run-dev-dev.sh  run-release-alice.sh  run-release-bob.sh  run-release-dev.sh
src/: main.rs
