[[bin]]
name = "giraffa-sdk"
path = "node/cli/bin/main.rs"

[package]
name = "giraffa-sdk"
version = "0.1.0"
authors = ["Giraffa Labs"]
edition = "2018"
default-run = "giraffa-sdk"

[dependencies]
ctrlc = { version = "3.1.3", features = ["termination"] }
cli = { package = "giraffa-sdk-cli", path = "node/cli", features = ["cli"] }
sc-cli = { git = "https://github.com/giraffalabs/substrate.git", branch = "master" }

[build-dependencies]
vergen = "3"
build-script-utils = { package = "substrate-build-script-utils", git = "https://github.com/giraffalabs/substrate.git", branch = "master" }

[workspace]
members = [
	"node/cli",
	"node/runtime",
	"modules/module-template",
	"modules/content",
	"modules/links",
	"primitives/graph-primitives"
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
