[package]
name = "graph-content"
version = "2.0.0"
authors = ["Graph4w3 Team"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
runtime-io = { package = "sr-io", git = "https://github.com/graph4w3/substrate.git", branch = "master", default-features = false }
sr-primitives = { git = "https://github.com/graph4w3/substrate.git", branch = "master", default-features = false }
support = { package = "frame-support", git = "https://github.com/graph4w3/substrate.git", branch = "master", default-features = false }
system = { package = "frame-system", git = "https://github.com/graph4w3/substrate.git", branch = "master", default-features = false }

[dev-dependencies]
primitives = { package = "substrate-primitives",  git = "https://github.com/graph4w3/substrate.git", branch = "master" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"runtime-io/std",
	"sr-primitives/std",
	"support/std",
	"system/std",
]