[package]
name = "giraffa-content"
version = "0.1.0"
authors = ["Graph4w3 Team"]
edition = "2018"

[dependencies]
serde = { version = "1.0.103", optional = true }
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = ["derive"] }
rstd = { package = "sr-std", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }
sr-primitives = { git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }
support = { package = "frame-support", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }
system = { package = "frame-system", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }
# Dev
runtime-io = { package = "sr-io", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }
# Graph
graph-primitives = { package = "giraffa-primitives", path = "../../primitives/graph-primitives", default-features = false }

[dev-dependencies]
primitives = { package = "substrate-primitives",  git = "https://github.com/giraffalabs/substrate.git", branch = "master" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"rstd/std",
	"runtime-io/std",
	"sr-primitives/std",
	"support/std",
	"system/std",
	"graph-primitives/std",
]