[package]
name = "giraffa-sdk-runtime"
version = "0.1.0"
authors = ["Giraffa Labs"]
edition = "2018"
build = "build.rs"

[dependencies]
# third-party dependencies
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = ["derive"] }
safe-mix = { version = "1.0.0", default-features = false }
serde = { version = "1.0.102", optional = true, features = ["derive"] }

# primitives
aura-primitives = { package = "sp-consensus-aura", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false}
inherents = { package = "sp-inherents", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false}
offchain-primitives = { package = "sp-offchain", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }
primitives = { package = "sp-core", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }
rstd = { package = "sp-std", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }
sp-api = { git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }
sp-session = { git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }
txpool-runtime-api = { package = "sp-transaction-pool-runtime-api", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }
version = { package = "sp-version", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }
# dev dependencies
runtime-io = { package = "sp-io", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }

# frame dependenciies
executive = { package = "frame-executive", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }
support = { package = "frame-support", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }
system = { package = "frame-system", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }
system-rpc-runtime-api = { package = "frame-system-rpc-runtime-api", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }

# palette dependencies
aura = { package = "pallet-aura", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }
balances = { package = "pallet-balances", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }
grandpa = { package = "pallet-grandpa", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }
indices = { package = "pallet-indices", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }
randomness-collective-flip = { package = "pallet-randomness-collective-flip", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }
sudo = { package = "pallet-sudo", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }
timestamp = { package = "pallet-timestamp", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }
transaction-payment = { package = "pallet-transaction-payment", git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }

# graph dependencies
content = { package = "giraffa-content", path = "../../modules/content", default-features = false }
links = { package = "giraffa-links", path = "../../modules/links", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = 'substrate-wasm-builder-runner', git = "https://github.com/giraffalabs/substrate.git", branch = "master" }

[features]
default = ["std"]
std = [
	"aura-primitives/std",
	"aura/std",
	"balances/std",
	"block-builder-api/std",
	"codec/std",
	"executive/std",
	"grandpa/std",
	"indices/std",
	"inherents/std",
	"offchain-primitives/std",
	"primitives/std",
	"randomness-collective-flip/std",
	"rstd/std",
	"runtime-io/std",
	"safe-mix/std",
	"serde",
	"sp-api/std",
	"sp-runtime/std",
	"sp-session/std",
	"sudo/std",
	"support/std",
	"system/std",
	"timestamp/std",
	"transaction-payment/std",
	"txpool-runtime-api/std",
	"version/std",
	# "content/std",
	# "links/std"
]
