[package]
name = "giraffa-primitives"
version = "0.1.0"
authors = ["Giraffa Labs"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = ["derive"] }
sp-runtime = { git = "https://github.com/giraffalabs/substrate.git", branch = "master", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-runtime/std",
]